<?xml version="1.0"?>
<package>
  <name>ros_uji_joystick</name>
  <version>1.0.0</version>
  <description>Joystick generic driver for ROS.</description>
  <maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
  <license>BSD</license>
  <author email="garciaju@uji.es">Juan Carlos Garcia</author>
  <url>https://github.com/jcgarsan/ros-uji-joystick</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
